Updating appropriate config file

--- a/change-selinux-to-enforcing.yml
+++ b/change-selinux-to-enforcing.yml
@@ -10,6 +10,4 @@
       command: setenforce 1
 
     - name: change SELinux conf file
-      command: sed -i -e 's,SELINUX=permissive,SELINUX=enforcing,;' /etc/sysconfig/selinux
-
-
+      command: sed -i -e 's,SELINUX=permissive,SELINUX=enforcing,;' /etc/selinux/config
