added restart docker
To make it work when docker service was running before running playbook

--- a/install-docker-add-insecure-registry.yml
+++ b/install-docker-add-insecure-registry.yml
@@ -23,3 +23,9 @@
     - name: add registry name to the list of insecure registry
       shell: >
              echo -e "{\n\t\"insecure-registries\" : [ \"{{ reg_name }}\" ]\n}" > /etc/docker/daemon.json
+             
+    - name: restart docker
+      service:
+         name: docker
+         state: restarted
+         enabled: yes
