rename insecure registries variable
give it a more explicit name.
It's nicer to have an explicit name when using `-e` in ansible-playbook
cli.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/install-docker-add-insecure-registry.yml
+++ b/install-docker-add-insecure-registry.yml
@@ -2,7 +2,7 @@
 
   hosts: all
   vars:
-      reg_name: " "  #insecure 
+      insecure_registries: "empty"  #insecure
   gather_facts: no
   become: yes
   become_method: sudo
@@ -18,7 +18,8 @@
       fail:
         msg: "Please mention registry name - reg_name"
       when:
-        - reg_name == " "
+        - insecure_registries == "empty"
+
 
     - name: add registry name to the list of insecure registry
       shell: >
