make all task title consistent
let's put everything in lower case.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/install-docker-add-insecure-registry.yml
+++ b/install-docker-add-insecure-registry.yml
@@ -13,7 +13,7 @@
         name: docker
         state: present
 
-    - name: Fail if registry name is not set
+    - name: fail if registry name is not set
       fail:
         msg: "Please mention registry name - reg_name"
       when:
