add an handler to restart docker service
not really necessary but let's put the restart of docker in a handler.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/install-docker-add-insecure-registry.yml
+++ b/install-docker-add-insecure-registry.yml
@@ -41,7 +41,9 @@
       copy:
         dest: /etc/docker/daemon.json
         content: "{{ new_content }}"
+        notify: restart docker
 
+  handlers:
     - name: restart docker
       service:
          name: docker
