updating a section with change in variable name

--- a/install-docker-add-insecure-registry.yml
+++ b/install-docker-add-insecure-registry.yml
@@ -15,7 +15,7 @@
 
     - name: fail if registry name is not set
       fail:
-        msg: "Please mention registry name - reg_name"
+        msg: "Please mention registry name - insecure_registries"
       when:
         - insecure_registries == "empty"
 
